# FeCIT_Flet

./: app.py  flet.yml
App_Financeiro/: .gitignore  README.md  finance.db  pyproject.toml  transacoes.csv
App_Financeiro/src/: database.py  flet.yaml  main.py
Curso de Flet - Set Programação/: aula01.py  aula02.py
Testes/: main.py
meu_app/: pyproject.toml
meu_app/Simplificado/: main2.py
meu_app/src/: main.py
