[project]
name = "app_financeiro"
version = "0.2.0"
description = "Meu app financeiro"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Mikael Sena", email = "senamikael464@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "python-dateutil",
  "pandas",
  "matplotlib",
  "python-docx",
  "fpdf2",
]

[tool.flet]
org = "com.mycompany"
product = "Meu App Financeiro"
company = "App do Mikael"

[tool.flet.app]
path = "src"
icon = "src/assets/icon.png"
